Fixed layout issues in smaller screens

--- a/src/components/Products/Categories.css
+++ b/src/components/Products/Categories.css
@@ -28,7 +28,7 @@
   padding: 0 0 16px 0;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 768px) {
   .category_container {
     width: 90%;
     transition: all 0.4s ease-in-out;
