--- a/src/components/Products/Sections.css
+++ b/src/components/Products/Sections.css
@@ -53,7 +53,7 @@
   margin: 0 0 16px 0;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 768px) {
   .section_info {
     width: 90%;
     padding: 20px 0px 20px 0;
